WES_camera_testing/build/log/idf_py_stdout_output_217234
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/build/bootloader/esp-idf/esptool_py && /home/jack300/.espressif/python_env/idf5.0_py3.12_env/bin/python /home/jack300/esp/v5.0.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/build/bootloader/bootloader.bin
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj 
/home/jack300/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DUNITY_INCLUDE_CONFIG_H -I/home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/build/config -I/home/jack300/esp/v5.0.2/esp-idf/components/newlib/platform_include -I/home/jack300/esp/v5.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jack300/esp/v5.0.2/esp-idf/components/freertos/esp_additions/include/freertos -I/home/jack300/esp/v5.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jack300/esp/v5.0.2/esp-idf/components/freertos/esp_additions/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_hw_support/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_hw_support/include/soc -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_hw_support/port/esp32/. -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/jack300/esp/v5.0.2/esp-idf/components/heap/include -I/home/jack300/esp/v5.0.2/esp-idf/components/log/include -I/home/jack300/esp/v5.0.2/esp-idf/components/soc/include -I/home/jack300/esp/v5.0.2/esp-idf/components/soc/esp32/. -I/home/jack300/esp/v5.0.2/esp-idf/components/soc/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/hal/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/hal/include -I/home/jack300/esp/v5.0.2/esp-idf/components/hal/platform_port/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_rom/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_rom/include/esp32 -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_rom/esp32 -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_common/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_system/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_system/port/soc -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_system/port/include/private -I/home/jack300/esp/v5.0.2/esp-idf/components/xtensa/include -I/home/jack300/esp/v5.0.2/esp-idf/components/xtensa/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/lwip/include -I/home/jack300/esp/v5.0.2/esp-idf/components/lwip/include/apps -I/home/jack300/esp/v5.0.2/esp-idf/components/lwip/include/apps/sntp -I/home/jack300/esp/v5.0.2/esp-idf/components/lwip/lwip/src/include -I/home/jack300/esp/v5.0.2/esp-idf/components/lwip/port/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/lwip/port/esp32/include/arch -I/home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/managed_components/espressif__esp32-camera/driver/include -I/home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/managed_components/espressif__esp32-camera/conversions/include -I/home/jack300/esp/v5.0.2/esp-idf/components/driver/include -I/home/jack300/esp/v5.0.2/esp-idf/components/driver/deprecated -I/home/jack300/esp/v5.0.2/esp-idf/components/driver/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_pm/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_ringbuf/include -I/home/jack300/esp/v5.0.2/esp-idf/components/efuse/include -I/home/jack300/esp/v5.0.2/esp-idf/components/efuse/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/mbedtls/port/include -I/home/jack300/esp/v5.0.2/esp-idf/components/mbedtls/mbedtls/include -I/home/jack300/esp/v5.0.2/esp-idf/components/mbedtls/mbedtls/library -I/home/jack300/esp/v5.0.2/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_app_format/include -I/home/jack300/esp/v5.0.2/esp-idf/components/bootloader_support/include -I/home/jack300/esp/v5.0.2/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_partition/include -I/home/jack300/esp/v5.0.2/esp-idf/components/app_update/include -I/home/jack300/esp/v5.0.2/esp-idf/components/spi_flash/include -I/home/jack300/esp/v5.0.2/esp-idf/components/pthread/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_timer/include -I/home/jack300/esp/v5.0.2/esp-idf/components/app_trace/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_event/include -I/home/jack300/esp/v5.0.2/esp-idf/components/nvs_flash/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_phy/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_phy/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/vfs/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_netif/include -I/home/jack300/esp/v5.0.2/esp-idf/components/wpa_supplicant/include -I/home/jack300/esp/v5.0.2/esp-idf/components/wpa_supplicant/port/include -I/home/jack300/esp/v5.0.2/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_wifi/include -I/home/jack300/esp/v5.0.2/esp-idf/components/unity/include -I/home/jack300/esp/v5.0.2/esp-idf/components/unity/unity/src -I/home/jack300/esp/v5.0.2/esp-idf/components/cmock/CMock/src -I/home/jack300/esp/v5.0.2/esp-idf/components/console -I/home/jack300/esp/v5.0.2/esp-idf/components/http_parser -I/home/jack300/esp/v5.0.2/esp-idf/components/esp-tls -I/home/jack300/esp/v5.0.2/esp-idf/components/esp-tls/esp-tls-crypto -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_adc/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_adc/interface -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_adc/esp32/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_adc/deprecated/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_eth/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_gdbstub/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_gdbstub/xtensa -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_gdbstub/esp32 -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_hid/include -I/home/jack300/esp/v5.0.2/esp-idf/components/tcp_transport/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_http_client/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_http_server/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_https_ota/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_lcd/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_lcd/interface -I/home/jack300/esp/v5.0.2/esp-idf/components/protobuf-c/protobuf-c -I/home/jack300/esp/v5.0.2/esp-idf/components/protocomm/include/common -I/home/jack300/esp/v5.0.2/esp-idf/components/protocomm/include/security -I/home/jack300/esp/v5.0.2/esp-idf/components/protocomm/include/transports -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_local_ctrl/include -I/home/jack300/esp/v5.0.2/esp-idf/components/esp_psram/include -I/home/jack300/esp/v5.0.2/esp-idf/components/espcoredump/include -I/home/jack300/esp/v5.0.2/esp-idf/components/espcoredump/include/port/xtensa -I/home/jack300/esp/v5.0.2/esp-idf/components/wear_levelling/include -I/home/jack300/esp/v5.0.2/esp-idf/components/sdmmc/include -I/home/jack300/esp/v5.0.2/esp-idf/components/fatfs/diskio -I/home/jack300/esp/v5.0.2/esp-idf/components/fatfs/vfs -I/home/jack300/esp/v5.0.2/esp-idf/components/fatfs/src -I/home/jack300/esp/v5.0.2/esp-idf/components/idf_test/include -I/home/jack300/esp/v5.0.2/esp-idf/components/idf_test/include/esp32 -I/home/jack300/esp/v5.0.2/esp-idf/components/ieee802154/include -I/home/jack300/esp/v5.0.2/esp-idf/components/json/cJSON -I/home/jack300/esp/v5.0.2/esp-idf/components/mqtt/esp-mqtt/include -I/home/jack300/esp/v5.0.2/esp-idf/components/perfmon/include -I/home/jack300/esp/v5.0.2/esp-idf/components/spiffs/include -I/home/jack300/esp/v5.0.2/esp-idf/components/ulp/ulp_common/include -I/home/jack300/esp/v5.0.2/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/jack300/esp/v5.0.2/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing=. -fmacro-prefix-map=/home/jack300/esp/v5.0.2/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj -c /home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/main/camera.c
/home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/main/camera.c:69:19: error: initializer element is not constant
   69 | camera_fb_t *fb = esp_camera_fb_get();
      |                   ^~~~~~~~~~~~~~~~~
/home/jack300/Documents/WES_2025_Hackathon/WES_camera_testing/main/camera.c:70:1: error: expected identifier or '(' before 'if'
   70 | if (fb)
      | ^~
[3/11] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
